# binfmtc

./: .gitignore  ChangeLog  Makefile.am  NEWS  README  binfmtasm-interpreter.1  binfmtc-init.sh  binfmtc-interpreter.1  binfmtc-interpreter.c  binfmtc-lang-c.c  binfmtc-lang-cxx.c  binfmtc-lang-f.c  binfmtc-lang-f95.c  binfmtc-lang-gcj.c  binfmtc-unreg.sh  binfmtcxx-interpreter.1  binfmtf-interpreter.1  binfmtf95-interpreter.1  binfmtgcj-interpreter.1  binfmtp-interpreter.1  configure.ac  debuild.sh  git-tag.sh  init.sh  realcsh.1  realcsh.c  realcsh.c.1  realcxxsh.cc  realcxxsh.cc.1  realksh.c  realksh.c.1  realksh.c.8  unreg.sh
.arch-ids/: COPYING.id  ChangeLog.id  Makefile.am.id  binfmtasm-interpreter.1.id  binfmtc-init.sh.id  binfmtc-interpreter.1.id  binfmtc-lang-f.c.id  binfmtc-lang-p.c.id  binfmtgcj-interpreter.1.id  configure.ac.id  realksh.c.id
changelogs/: ChangeLog.ibook-dancer  ChangeLog.mainline
changelogs/.arch-ids/: ChangeLog.ibook-dancer.id
debian/: .gitignore  README.Debian  binfmtc.postinst  binfmtc.postrm  changelog  control  copyright  dirs  f95compile.binfmts  rules
debian/.arch-ids/: README.Debian.id  binfmtc.postinst.id
debian/pbuilder-test/: 01_check
tests/: asm.sh  cxxprint.cxx  cxxprint.sh  fortran.f  fortran.sh  pascal.pas  pascal.sh  print.c  realcsh.sh  realksh.sh  space.sh  wrongcode.c
tests/.arch-ids/: asm-x86.S.id  asm.sh.id  cxxprint.sh.id  java.sh.id  javatest.java.id  news-okay.sh.id  pascal.pas.id  print.c.id  wrongmagic.c.id  wrongmagic.sh.id
upaccho2/: upaccho2-webservice.c  upaccho2-webservice.h  upaccho2.c
upaccho2/.arch-ids/: upaccho2-webservice.h.id
{arch}/: ++default-version  =tagging-method
{arch}/++pristine-trees/unlocked/binfmtc/binfmtc--mainline/binfmtc--mainline--0.1/dancer@netfort.gr.jp--2005-web/binfmtc--mainline--0.1--patch-12/: README  autogen.sh  binfmtc-lang-cxx.c  binfmtcxx-interpreter.1  configure.ac
{arch}/++pristine-trees/unlocked/binfmtc/binfmtc--mainline/binfmtc--mainline--0.1/dancer@netfort.gr.jp--2005-web/binfmtc--mainline--0.1--patch-12/.arch-ids/: NEWS.id  README.id  autogen.sh.id  binfmtc-interpreter.c.id  binfmtc-unreg.sh.id  binfmtf-interpreter.1.id  binfmtp-interpreter.1.id
{arch}/++pristine-trees/unlocked/binfmtc/binfmtc--mainline/binfmtc--mainline--0.1/dancer@netfort.gr.jp--2005-web/binfmtc--mainline--0.1--patch-12/changelogs/: ChangeLog.ibook-dancer
{arch}/++pristine-trees/unlocked/binfmtc/binfmtc--mainline/binfmtc--mainline--0.1/dancer@netfort.gr.jp--2005-web/binfmtc--mainline--0.1--patch-12/debian/: asmassembly.binfmts  ccompile.binfmts  changelog  cxxcompile.binfmts  fcompile.binfmts  gcjcompile.binfmts  pcompile.binfmts  rules
{arch}/++pristine-trees/unlocked/binfmtc/binfmtc--mainline/binfmtc--mainline--0.1/dancer@netfort.gr.jp--2005-web/binfmtc--mainline--0.1--patch-12/tests/: asm-ppc.S  asm.sh  cxxprint.cxx  fortran.sh  prerequisite.sh  wrongcode.sh  wrongmagic.c
{arch}/++pristine-trees/unlocked/binfmtc/binfmtc--mainline/binfmtc--mainline--0.1/dancer@netfort.gr.jp--2005-web/binfmtc--mainline--0.1--patch-21/: Makefile.am  binfmtasm-interpreter.1  binfmtc-init.sh  binfmtc-interpreter.c  binfmtc-lang-c.c  binfmtc.h  binfmtf-interpreter.1  binfmtp-interpreter.1  configure.ac  realcsh.c.1  realksh.c.8
{arch}/++pristine-trees/unlocked/binfmtc/binfmtc--mainline/binfmtc--mainline--0.1/dancer@netfort.gr.jp--2005-web/binfmtc--mainline--0.1--patch-21/.arch-ids/: binfmtc-lang-c.c.id  binfmtc-lang-cxx.c.id  binfmtc.h.id  realksh.c.8.id
{arch}/++pristine-trees/unlocked/binfmtc/binfmtc--mainline/binfmtc--mainline--0.1/dancer@netfort.gr.jp--2005-web/binfmtc--mainline--0.1--patch-21/debian/: README.Debian  binfmtc.postrm  changelog
{arch}/++pristine-trees/unlocked/binfmtc/binfmtc--mainline/binfmtc--mainline--0.1/dancer@netfort.gr.jp--2005-web/binfmtc--mainline--0.1--patch-21/tests/: asm-ppc.S  fortran.f  java.sh  multisource.c  realksh.sh  space.sh
{arch}/++pristine-trees/unlocked/binfmtc/binfmtc--mainline/binfmtc--mainline--0.1/dancer@netfort.gr.jp--2005-web/binfmtc--mainline--0.1--patch-21/upaccho2/: upaccho2.c
{arch}/++pristine-trees/unlocked/binfmtc/binfmtc--mainline/binfmtc--mainline--0.1/dancer@netfort.gr.jp--2005-web/binfmtc--mainline--0.1--patch-23/: NEWS  binfmtc-lang-asm.c  binfmtc-lang-p.c  configure.ac  realksh.c
{arch}/++pristine-trees/unlocked/binfmtc/binfmtc--mainline/binfmtc--mainline--0.1/dancer@netfort.gr.jp--2005-web/binfmtc--mainline--0.1--patch-23/.arch-ids/: binfmtc-lang-asm.c.id  binfmtc-lang-gcj.c.id  binfmtcxx-interpreter.1.id  realcsh.c.1.id  realcsh.c.id
{arch}/++pristine-trees/unlocked/binfmtc/binfmtc--mainline/binfmtc--mainline--0.1/dancer@netfort.gr.jp--2005-web/binfmtc--mainline--0.1--patch-23/debian/: changelog
{arch}/,,inode-sigs/: dancer@netfort.gr.jp--2005-web%binfmtc--mainline--0.1--patch-18  dancer@netfort.gr.jp--2005-web%binfmtc--mainline--0.1--patch-19  dancer@netfort.gr.jp--2005-web%binfmtc--mainline--0.1--patch-20  dancer@netfort.gr.jp--2005-web%binfmtc--mainline--0.1--patch-21  dancer@netfort.gr.jp--2005-web%binfmtc--mainline--0.1--patch-23
{arch}/binfmtc/binfmtc--mainline/binfmtc--mainline--0.1/dancer@ibookg4.dancer.netfort.gr.jp--2005/patch-log/: patch-1  patch-15  patch-16  patch-17  patch-23  patch-25  patch-27  patch-28  patch-29  patch-30  patch-9
{arch}/binfmtc/binfmtc--mainline/binfmtc--mainline--0.1/dancer@netfort.gr.jp--2005-web/patch-log/: patch-1  patch-10  patch-15  patch-17  patch-23  patch-3  patch-5  patch-7
(+45 files in other folders)
