dnl Process this file with autoconf to produce a configure script.

m4_define(BINFMTCVERSION,0.9.X)
AC_INIT(binfmtc, BINFMTCVERSION)
AM_INIT_AUTOMAKE(binfmtc, BINFMTCVERSION)
AM_CONFIG_HEADER(config.h)

AM_MAINTAINER_MODE
AC_ISC_POSIX
AC_PROG_CC
AC_PROG_CXX
AM_PROG_CC_STDC
AC_PROG_MAKE_SET

AC_HEADER_STDC
AC_C_CONST

AC_CONFIG_FILES([ Makefile
])
AC_OUTPUT
